--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
-<html><head><link rel="stylesheet" type="text/css" href="style.css"></head>
+<html><head><link rel="stylesheet" type="text/css" href="style.css"></head><body>
 
-<body>
 
-<h2>Pure CSS bayan with memes</h2>
 
-<button class="bayan">Section 1</button>
+<h2>Pure CSS Bayan with memes</h2>
+
+<button class="bayan">God is a killer</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <img src="meme1.jpg" alt="Every time you copy paste god kills a kitten">
 </div>
 
-<button class="bayan">Section 2</button>
+<button class="bayan">Just do it</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-
-<button class="bayan">Section 3</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <img src="meme2.jpg" alt="Pure CSS Bayan!. Just DO it!!!">
 </div>
 
 
